tests/ui/parser/issues/issue-108109-fn-missing-params.rs
//@ run-rustfix

pub fn missing -> () {}
//~^ ERROR missing parameters for function definition

pub fn missing2 {}
//~^ ERROR missing parameters for function definition

fn main() {}
